--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <p>-Ashwin.J.K</p>
         <p>'CSE-A_FIRST YEARS'</p>
     </div>
-
-    <div class="screen" 
-<div class="screen" id="rotate-screen">
-    <div class="rotation-hint">
-        <i class="fas fa-mobile-alt rotate-icon"></i>
+    
+    <div class="screen" id="rotate-screen">
+        <div class="rotation-hint">
+            <i class="fas fa-mobile-alt rotate-icon"></i>
+        </div>
+        <p class="rotate-text">Please rotate your device for a better experience if using phone</p>
     </div>
-    <p class="rotate-text">Please rotate your device for a better experience if using phone</p>
-</div>
-id="main-menu">
+    
+    <div class="screen" id="main-menu">
         <h1>STONE PAPERS SCISSORS GAME</h1>
         <button class="btn" id="start-btn">START</button>
         <p class="note">'After pressing the start button, you have 5 seconds to choose a card...'</p>
